[gd_scene load_steps=11 format=3 uid="uid://bifmwduxebjrr"]

[ext_resource type="Script" path="res://Scripts/audio.gd" id="1_skpr3"]
[ext_resource type="AudioStream" uid="uid://day80c73pqs03" path="res://Sounds/flavorless_day_opening_theme.ogg" id="2_gcd2a"]
[ext_resource type="AudioStream" uid="uid://bd4qmi2p71mhv" path="res://Sounds/basic_shot.wav" id="3_u462e"]
[ext_resource type="AudioStream" uid="uid://d4fcxhcmfy1kq" path="res://Sounds/fireball_x_shotwand.wav" id="4_jb7j0"]
[ext_resource type="AudioStream" uid="uid://bx6w65om1ruxx" path="res://Sounds/player_hurt.wav" id="5_8cjdl"]
[ext_resource type="AudioStream" uid="uid://c4bxt5s18qx1k" path="res://Sounds/dead_enemy.wav" id="6_62g34"]
[ext_resource type="AudioStream" uid="uid://dmxdmpmorhtlr" path="res://Sounds/enemy_hurt.wav" id="7_rhjrg"]
[ext_resource type="AudioStream" uid="uid://c48y3o6ibibrs" path="res://Sounds/enemy_melee.wav" id="8_h1p8f"]
[ext_resource type="AudioStream" uid="uid://dvsw17w58ou2i" path="res://Sounds/enemy_shot.wav" id="9_sxvft"]
[ext_resource type="AudioStream" uid="uid://c2182hb3yho" path="res://Sounds/explosion_effect.wav" id="10_7awrl"]

[node name="Audio" type="Node"]
process_mode = 3
script = ExtResource("1_skpr3")

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_gcd2a")
bus = &"Music"

[node name="PlayerShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_u462e")
bus = &"SFX"

[node name="PlayerShotStrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jb7j0")
bus = &"SFX"

[node name="PlayerHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8cjdl")
bus = &"SFX"

[node name="EnemyDead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_62g34")
bus = &"SFX"

[node name="EnemyHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rhjrg")
bus = &"SFX"

[node name="EnemyMelee" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_h1p8f")
bus = &"SFX"

[node name="EnemyShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_sxvft")
bus = &"SFX"

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_7awrl")
bus = &"SFX"

[connection signal="finished" from="MainTheme" to="." method="_on_main_theme_finished"]
